upgrade whole blog

--- a/_includes/refactor-content.html
+++ b/_includes/refactor-content.html
@@ -65,13 +65,16 @@
       {% capture _label %}
         <span data-label-text="{{ _label_text | strip }}"><i class="{{ _label_icon }}"></i></span>
       {% endcapture %}
+      
+      {%- include snippets/get-locale-string.html key='SUCCEED' -%}
+      {%- assign _succeed = __return -%}
 
       {% assign _new_content = _new_content
         | append: _snippet
         | append: '<div class="code-header">'
         | append: _label
         | append: '<button aria-label="copy" data-title-succeed="'
-        | append: site.data.locales[include.lang].post.button.copy_code.succeed
+        | append: _succeed
         | append: '"><i class="far fa-clipboard"></i></button></div>'
         | append: '<div class="highlight"><code>'
       %}
