--- a/_sass/_sharing-to-media.scss
+++ b/_sass/_sharing-to-media.scss
@@ -1,6 +1,6 @@
-/* post 的“分享到”功能 */
-/* html 文件位于 _include/article/top/custom.thml */
-/* js 文件位于 _include/scripts/wechat-share.js */
+// post 的“分享到”功能
+// html 文件位于 _include/article/top/custom.thml
+// js 文件位于 _include/scripts/wechat-share.js
 
 .share-section {
   display: flex;
