--- a/_includes/snippets/multimedia.html
+++ b/_includes/snippets/multimedia.html
@@ -1,17 +1,17 @@
 <div class="multimedia">
   {%- if page.download -%}
-    <div class="multimedia pdf">
-      <a href="https://www.alipan.com/s/ZsWqn6uAr91" target="_blank" class="multimedia-link">
-        <img src="/assets/images/icon/download.svg" alt="Download PDF">
+    <div class="pdf">
+      <a href="https://www.alipan.com/s/ZsWqn6uAr91" title="Download PDF">
+        <img src="/assets/images/icon/download.svg" alt="Download PDF" />
         <span>下载 PDF 版</span>
       </a>
     </div>
   {%- endif -%}
 
   {%- if page.videos -%}
-    <div class="multimedia video">
-      <a href="https://space.bilibili.com/10738871" target="_blank" class="multimedia-link">
-        <img src="/assets/images/icon/video.svg" alt="video">
+    <div class="video">
+      <a href="https://space.bilibili.com/10738871" title="Watch Video">
+        <img src="/assets/images/icon/video.svg" alt="Watch Video" />
         <span>观看视频</span>
       </a>
     </div>
