--- a/_sass/addon/_module.scss
+++ b/_sass/addon/_module.scss
@@ -27,12 +27,12 @@
 }
 
 @mixin prompt($type, $fa-content, $fa-style: "solid", $rotate: 0) {
-  &.prompt-#{$type} {
-    background-color: var(--prompt-#{$type}-bg);
+  &[class*=#{$type}] {
+    background-color: map-get($prompt-colors, #{$type}-bg);
 
     &::before {
       content: $fa-content;
-      color: var(--prompt-#{$type}-icon-color);
+      color: map-get($prompt-colors, #{$type}-color);
       font: var(--fa-font-#{$fa-style});
       font-size: 1.5rem;
       vertical-align: middle; // 设置垂直对齐
@@ -47,11 +47,11 @@
 
 @mixin details($class, $type) {
   &.details-#{$class} {
-    border-left: 0.2rem solid var(--prompt-#{$type}-icon-color);
+    border-left: 0.2rem solid map-get($prompt-colors, #{$type}-color);
 
     > summary {
-      background-color: var(--prompt-#{$type}-bg);
-      color: var(--prompt-#{$type}-icon-color);
+      background-color: map-get($prompt-colors, #{$type}-bg);
+      color: map-get($prompt-colors, #{$type}-color);
     }
   }
 }
@@ -100,7 +100,7 @@
     }
   }
 
-  > p:last-child {
+  p:last-child {
     margin: {
       bottom: 0;
       top: 0;
@@ -109,12 +109,12 @@
 }
 
 @mixin box($type, $icon-content, $fa-style: "solid") {
-  .box-#{$type} {
+  &[class*=#{$type}] {
     @include colorbox(
-      var(--prompt-#{$type}-icon-color),
-      var(--prompt-#{$type}-icon-color),
+      map-get($prompt-colors, #{$type}-color),
+      map-get($prompt-colors, #{$type}-color),
       $icon-content,
-      var(--prompt-#{$type}-bg),
+      map-get($prompt-colors, #{$type}-bg),
       $fa-style
     );
   }
