--- a/_includes/snippets/appreciate.html
+++ b/_includes/snippets/appreciate.html
@@ -1,16 +1,16 @@
 <div class="appreciate-container">
-  <a class="appreciate-icon" href="javascript:void(0)" title="打赏给我">
+  <a href="javascript:void(0)" title="打赏给我">
     <img src="assets/images/icon/appreciate.svg" alt="apppreciate">
   </a>
   
   <div class="appreciate-qrcode">
-    <p class="appreciate-text">感谢支持！您的打赏是我继续创作的动力！</p>
-    <div class="appreciate-item">
+    <p>感谢支持！您的打赏是我继续创作的动力！</p>
+    <div>
       <figure>
-        <img src="/assets/images/picture/donate/wechat.png" alt="微信支付二维码" />
+        <img class="wechat-qrcode" src="/assets/images/picture/donate/wechat.png" alt="微信支付" />
       </figure>
       <figure>
-        <img src="/assets/images/picture/donate/alipay.jpg" alt="支付宝二维码" />  
+        <img class="alipay-qrcode" src="/assets/images/picture/donate/alipay.jpg" alt="支付宝" />  
       </figure>
     </div>
   </div>
