--- a/_includes/snippets/sharing-to-media.html
+++ b/_includes/snippets/sharing-to-media.html
@@ -1,22 +1,22 @@
 <div class="share-section">
-  <span label="share-label">分享到：</span>
+  <span>分享到：</span>
 
   <div class="share-buttons">
-    <a class="share-qqzone" href="https://sns.qzone.qq.com/cgi-bin/qzshare/cgi_qzshare_onekey?url={{ page.url | absolute_url }}&title={{ page.title }}" target="_blank" title="分享到QQ空间">
-      <img src="/assets/images/icon/qqzone.svg" alt="QQ空间" />
+    <a class="share-qqzone" href="https://sns.qzone.qq.com/cgi-bin/qzshare/cgi_qzshare_onekey?url={{ page.url | absolute_url }}&title={{ page.title }}" title="qqzone">
+      <img class="share-icon" src="/assets/images/icon/qqzone.svg" alt="qqzone" />
     </a>
 
     <div class="share-wechat-container">
-      <a class="share-wechat" href="javascript:void(0);" title="分享到微信">
-        <img src="assets/images/icon/wechat.svg" alt="微信" />
+      <a class="share-wechat" href="javascript:void(0);" title="wechat">
+        <img class="share-icon" src="assets/images/icon/wechat.svg" alt="wechat" />
       </a>
       <div class="wechat-qrcode">
-        <img src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data={{ page.url | absolute_url }}" alt="微信二维码" />
+        <img src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data={{ page.url | absolute_url }}" alt="wechat-qrcode" />
       </div>
     </div>
 
-    <a class="share-weibo" href="https://service.weibo.com/share/share.php?url={{ page.url | absolute_url }}&title={{ page.title }}" target="_blank" title="分享到微博">
-      <img src="/assets/images/icon/weibo.svg" alt="微博" />
+    <a class="share-weibo" href="https://service.weibo.com/share/share.php?url={{ page.url | absolute_url }}&title={{ page.title }}" title="weibo">
+      <img class="share-icon" src="/assets/images/icon/weibo.svg" alt="weibo" />
     </a>
   </div>
 </div>
