--- a/_sass/_email.scss
+++ b/_sass/_email.scss
@@ -1,5 +1,3 @@
-/* html 文件位于 contact.md */
-
 form {
   max-width: 600px;
   margin: 0 auto;
@@ -17,19 +15,26 @@ form {
   textarea {
     width: 100%;
     padding: 10px;
-    margin-top: 5px;
-    margin-bottom: 15px;
-    border-radius: 4px;
-    border: 1px solid #ccc;
     font-size: 1rem;
+    margin: {
+      top: 5px;
+      bottom: 15px;
+    };
+    border: {
+      width: 1px;
+      style: solid;
+      color: #ccc;
+      radius: 4px;
+    }
   }
 
   button {
     background-color: #5cb85c;
     color: white;
     padding: 10px 20px;
-    border: none;
-    border-radius: 4px;
+    border: none {
+      radius: 4px;
+    };
     cursor: pointer;
 
     &:hover {
