--- a/_sass/addon/_colors.scss
+++ b/_sass/addon/_colors.scss
@@ -1,10 +1,10 @@
-@mixin light-scheme {
-  --prompt-tip-bg: rgba(123, 247, 144, 0.2);
-  --prompt-tip-icon-color: #03b303;
-  --prompt-info-bg: #e1f5fe;
-  --prompt-info-icon-color: #0070cb;
-  --prompt-warning-bg: rgb(255, 243, 205);
-  --prompt-warning-icon-color: #ef9c03;
-  --prompt-danger-bg: rgba(248, 215, 218, 0.56);
-  --prompt-danger-icon-color: #df3c30;
-}
+$prompt-colors: (
+  tip-bg: rgba(123, 247, 144, 0.2),
+  tip-color: #03b303,
+  info-bg: #e1f5fe,
+  info-color: #0070cb,
+  warning-bg: rgb(255, 243, 205),
+  warning-color: #ef9c03,
+  danger-bg: rgba(248, 215, 218, 0.56),
+  danger-color: #df3c30,
+)
