upgrade scroll-to-top

--- a/_includes/snippets/scroll-to-top.html
+++ b/_includes/snippets/scroll-to-top.html
@@ -1,8 +1,8 @@
 <div>
   {%- if page.layout == 'article' -%}
-    <a href="#" id="scroll-to-top" title="Scroll to top">
+    <button id="scroll-to-top">
       <i class="fas fa-angle-up"></i>
-    </a>
+    </button>
     <script>
       {%- include scripts/scroll-to-top.js -%}
     </script>
