--- a/_sass/addon/_colors.scss
+++ b/_sass/addon/_colors.scss
@@ -7,4 +7,35 @@ $prompt-colors: (
   warning-color: #ef9c03,
   danger-bg: rgba(248, 215, 218, 0.56),
   danger-color: #df3c30,
-)
+);
+
+$thead-color: rgba(210, 215, 217, 0.75);
+$code-bg-color: #f6f8fa;
+$light-text-color: #c9c8c8;
+$label-text-color: #a3a3a3;
+$lineno-color: #9e9e9e;
+$inline-code-bg: #f9f2f4;
+$inline-code-color: #c7254e;
+$border-color: #ececec;
+$dot-color: #e5e5e5;
+$dark-text-color: #3a3a3a;
+$filepath-color: #cacaca;
+
+$border-radius: 10px;
+$header-height: 2.25rem;
+$dot-margin: 1rem;
+$code-font-size: 0.85rem;
+
+$addon-types: (
+  "tip": "\f0eb",
+  "info": "\f06a",
+  "warning": "\f06a",
+  "danger": "\f071",
+);
+
+$math-types: (
+  "definition": "tip",
+  "theorem": "warning",
+  "proposition": "info",
+  "example": "danger",
+);
