--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -50,6 +50,7 @@
     "additional/alert",
     "additional/tag",
     "additional/photo-frame",
+    "additional/style",
 
     "layout/base",
     "layout/page",
