--- a/_sass/additional/_style.scss
+++ b/_sass/additional/_style.scss
@@ -1,4 +1,3 @@
-@use "sass:map";
 @use "sass:color";
 
 $addtional-styles: (
@@ -9,13 +8,19 @@ $addtional-styles: (
 );
 
 $border-color: color.mix(#000, #fff, 10%);
+$border-radius: 0.4rem;
+
+@mixin border-style($color) {
+  border: 1px solid $color;
+}
 
 @mixin arlert($type, $color) {
   p.#{$type} {
     padding: 0.5rem 1rem;
     background-color: rgba($color, 0.1); // 10% 透明度
-    border: 1px solid $color;
-    border-radius: 0.4rem;
+    border-radius: $border-radius;
+
+    @include border-style($color);
   }
 }
 
