--- a/_sass/additional/_alert.scss
+++ b/_sass/additional/_alert.scss
@@ -1,7 +1,7 @@
 @use "style";
 
 .article__content {
-  @each $type, $color in style.$addtional-styles {
-    @include style.arlert($type, $color);
+  @each $type, $color in style.$status-colors {
+    @include style.alert($type, $color);
   }
 }
