--- a/_sass/additional/_style.scss
+++ b/_sass/additional/_style.scss
@@ -8,7 +8,8 @@ $status-colors: (
 );
 
 $border-color: color.mix(#000, #fff, 10%);
-$border-radius: 0.4rem;
+$rounded-border-radius: 0.4rem;
+$circle-border-radius: 50%;
 
 @mixin border-style($color) {
   border: 1px solid $color;
